--- a/app/views/hotels/main.html.erb
+++ b/app/views/hotels/main.html.erb
@@ -47,7 +47,7 @@
                     <div class="second-level-title__inner">
                       <span class="second-level-title__img"><%= image_tag url_for(hs.site.logo) if hs.site.logo.attached? %></span>
                       <span class="collapse-arrow collapse-arrow-down-black"></span><%= hs.site.name %></div>
-                    <a href="<%= hs.link %>" target="_blank"><span class="second-link-out"></span></a>
+                    <a href="<%= hs.hotel.origin_url %>" target="_blank"><span class="second-link-out"></span></a>
                   </div>
                 </div>
               </td>
