--- a/app/views/hotels/main.html.erb
+++ b/app/views/hotels/main.html.erb
@@ -76,7 +76,7 @@
                           <% mpss = mps.where(month: month, year: Date.current.year).take %>
                           <td>
                             <div class="cel-inner">
-                      <span class="top-price price-<%= mpss.price_option if mpss %>"> <%= price_form(mpss.price) %>
+                      <span class="top-price price-<%= mpss.price_option if mpss %>"> <%= price_form((mpss.price if mpss) || 0) %>
               </span>
                               <span class="bottom-price"><%= price_form((origin.price if origin) || 0) %></span>
                             </div>
@@ -90,7 +90,7 @@
                           <td>
                             <div class="cel-inner">
                       <span class="top-price price-<%= mpss.price_option if mpss %>">
-                 <%= price_form(mpss.price) %>
+                 <%= price_form((mpss.price if mpss) || 0)  %>
               </span>
                               <span class="bottom-price"><%= price_form((origin.price if origin) || 0) %></span>
                             </div>
